--- a/user-service/package.json
+++ b/user-service/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "redis": "^5.5.6"
   }
 }
