--- a/order-services/package.json
+++ b/order-services/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.0",
+    "amqplib": "^0.10.8",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "redis": "^5.5.6"
+    "redis": "^5.5.6",
+    "uuid": "^11.1.0"
   }
 }
