--- a/product-service/package.json
+++ b/product-service/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.0",
+    "amqplib": "^0.10.8",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "redis": "^5.5.6"
